# logos-blockchain

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  HO_BANNING_SERVICE_02_INSTRUCTIONS.md  README.md  VERIFICATION_REPORT.md  compose.devnet.run.yml  compose.devnet.setup.yml  compose.run.yml  compose.static.yml  flake.nix  push_ho_banning_service_02.sh
.github/ISSUE_TEMPLATE/: release-candidate.md  release.md
.github/PULL_REQUEST_TEMPLATE/: specification.md
.github/actions/cargo-hack-check-cached/: action.yml
.github/actions/prune-cache/: action.yml
.github/actions/setup-cargo-cache/: action.yml
.github/actions/update-cargo-cache/: action.yml
.github/release/: release-content.md
.github/workflows/: clear-cache-pr.yml  clear-cache.yml  code-check.yml  codecov.yml  cucumber.yml  end-to-end-with-cucumber.yml  genesis-ceremony.yml  nightly-cargo-hack.yml  prepare-release.yml  publish-node-image.yml
blend/proofs/: Cargo.toml
c-bindings/: Cargo.toml  lib_logos_blockchain.h
c-bindings/src/: lib.rs  macros.rs  result.rs
c-bindings/src/api/: blend.rs  config.rs  cryptarchia.rs  lifecycle.rs  mod.rs  sdp.rs  storage.rs  subscriptions.rs  wallet.rs
consensus/cryptarchia-engine/: Cargo.toml
consensus/cryptarchia-engine/src/: config.rs  lib.rs  time.rs
consensus/cryptarchia-sync/src/: config.rs
core/: Cargo.toml
core/benches/: mantle_tx_components.rs
core/src/: lib.rs
core/src/block/: genesis.rs  mod.rs
core/src/codec/: errors.rs
core/src/mantle/: channel.rs  encoding.rs  gas.rs  genesis_tx.rs  ledger.rs  mod.rs  tx.rs  tx_builder.rs
core/src/proofs/: leader_claim_proof.rs  leader_proof.rs  merkle.rs  mod.rs
core/src/sdp/: blend.rs  mod.rs
core/src/utils/: merkle.rs
kms/keys/: Cargo.toml
kms/macros/: Cargo.toml
ledger/: Cargo.toml
ledger/src/: config.rs  lib.rs
ledger/src/cryptarchia/: mod.rs  stake.rs
ledger/src/mantle/: channel.rs  leader.rs  mod.rs
libp2p/: Cargo.toml
libp2p/src/: swarm.rs
libp2p/src/behaviour/: mod.rs
mmr/src/: lib.rs  path.rs
nodes/api-common/src/: paths.rs
nodes/executor/binary/: Cargo.toml
nodes/node/: config-one-node.yaml  config.yaml  one-node-custom-deployment.yaml  standalone-deployment-config.yaml  standalone-node-config.yaml
nodes/node/binary/: Cargo.toml
nodes/node/http-client/: Cargo.toml
nodes/nomos-executor/: config.yaml
nodes/nomos-executor/executor/: Cargo.toml
nodes/nomos-node/: config.yaml
nodes/nomos-node/node/: Cargo.toml
nomos-blend/crypto/: Cargo.toml
nomos-blend/crypto/src/: cipher.rs  lib.rs
nomos-blend/message/src/: input.rs
nomos-blend/scheduling/: Cargo.toml
nomos-da/network/core/: Cargo.toml
nomos-kms/keys/: Cargo.toml
nomos-libp2p/: Cargo.toml
nomos-libp2p/src/: swarm.rs
nomos-services/api/: Cargo.toml
nomos-services/banning/: Cargo.toml
nomos-services/banning/src/: config.rs  lib.rs  service.rs  store.rs  types.rs  utils.rs
nomos-services/blend/: Cargo.toml
nomos-services/blend/src/: kms.rs  lib.rs
nomos-services/chain/chain-leader/: Cargo.toml
nomos-services/chain/chain-network/: Cargo.toml
nomos-services/chain/chain-service/: Cargo.toml
nomos-services/data-availability/dispersal/: Cargo.toml
nomos-services/data-availability/network/: Cargo.toml
nomos-services/data-availability/sampling/: Cargo.toml
nomos-services/data-availability/verifier/: Cargo.toml
nomos-services/network/: Cargo.toml
nomos-services/network/src/: message.rs
nomos-services/tx-service/: Cargo.toml
nomos-services/tx-service/tests/: mock.rs
scripts/: setup-logos-blockchain-circuits.ps1  setup-logos-blockchain-circuits.sh  setup-logos-blockchain-node.sh
scripts/cargo-hack-check/: compute_crate_hash.sh  script.py
services/api/: Cargo.toml
services/api/src/http/: libp2p.rs  mantle.rs  mod.rs  sdp.rs
services/api/src/http/storage/: mod.rs
services/api/src/http/storage/adapters/: rocksdb.rs
services/banning/: Cargo.toml
services/banning/src/: config.rs  lib.rs  types.rs
services/blend/: Cargo.toml
services/blend/src/: epoch_info.rs  message.rs
services/chain/chain-leader/: Cargo.toml
services/chain/chain-network/: Cargo.toml
services/chain/chain-service/: Cargo.toml
services/key-management-system/: Cargo.toml
services/key-management-system/src/: lib.rs
services/network/: Cargo.toml
services/network/src/: lib.rs  message.rs
services/sdp/: Cargo.toml
services/sdp/src/: lib.rs  mempool.rs  wallet.rs
services/storage/: Cargo.toml
services/time/: Cargo.toml
services/tracing/: Cargo.toml
services/tracing/src/: lib.rs
services/tx-service/: Cargo.toml
services/tx-service/tests/: mock.rs
services/wallet/: Cargo.toml
services/wallet/src/: api.rs  lib.rs
testnet/: Dockerfile  cfgsync.yaml  compose.tracing.yml  nginx-run.conf  nginx-setup.conf  nginx.conf
testnet/cfgsync/: Cargo.toml
testnet/cfgsync/src/: config.rs  lib.rs  repo.rs  server.rs
testnet/cfgsync/src/config/: consensus.rs  kms.rs  mod.rs
testnet/cfgsync/tests/: cfgsync.yaml  server_client.rs  with_faucet.rs  with_node.rs
testnet/faucet/: Cargo.toml
testnet/l2-sequencer-archival-demo/archiver/: Cargo.toml
testnet/nginx/: run.conf  setup.conf
testnet/scripts/: run_node.sh
testnet/static/: index.html
testnet/static/faucet/: index.html
testnet/static/style/: base.css
testnet/tracing/: otel.yaml
testnet/tui-zone/: Cargo.toml
testnet/tui-zone/src/: lib.rs  state.rs  ui.rs
tests/: Cargo.toml
tests/cucumber_tests/: cucumber.rs
tests/cucumber_tests/features/: cryptarchia.feature  manual_control.feature  (+3 more)
tests/src/: lib.rs
tests/testing_framework/: Cargo.toml
tools/blockchain-tools/: Cargo.toml
tools/blockchain-tools/src/: lib.rs
tools/blockchain-tools/src/genesis/: distribution.rs  inscription.rs  mod.rs
tools/config/: Cargo.toml
utils/: Cargo.toml
utils/src/: bounded_duration.rs  bounded_vec.rs  lib.rs  types.rs
utxotree/src/: lib.rs  merkle.rs
wallet/: Cargo.toml
wallet/src/: lib.rs  voucher.rs
zone-sdk/: Cargo.toml
zone-sdk/src/: adapter.rs  indexer.rs  lib.rs  sequencer.rs  state.rs
(+407 files in other folders)
