[package]
name = "nomos-banning"
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }


[lints]
workspace = true

[dependencies]
async-trait = "0.1"
libp2p      = { workspace = true, features = ["serde"] }
nomos-utils = { workspace = true, features = ["time"] }
overwatch   = { workspace = true }
serde       = { version = "1.0.228", features = ["derive"] }
serde_with  = { workspace = true }
tokio       = { workspace = true, features = ["sync", "time", "rt", "macros"] }
tracing     = { workspace = true }
