[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-api-service"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait                = { workspace = true }
bytes                      = { workspace = true }
futures                    = { workspace = true }
lb-blend-service           = { workspace = true }
lb-chain-broadcast-service = { workspace = true }
lb-chain-leader-service    = { workspace = true }
lb-chain-service           = { features = ["openapi"], workspace = true }
lb-core                    = { workspace = true }
lb-ledger                  = { workspace = true }
lb-libp2p                  = { workspace = true }
lb-network-service         = { features = ["openapi"], workspace = true }
lb-sdp-service             = { workspace = true }
lb-storage-service         = { features = ["rocksdb-backend"], workspace = true }
lb-time-service            = { workspace = true }
lb-tx-service              = { features = ["openapi"], workspace = true }
overwatch                  = { workspace = true }
serde                      = { workspace = true }
serde_json                 = { workspace = true }
thiserror                  = { workspace = true }
tokio                      = { features = ["net"], workspace = true }
tokio-stream               = { workspace = true }
tracing                    = { workspace = true }

[dev-dependencies]
serde   = { workspace = true }
tracing = { workspace = true }
