[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-banning-service"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
lb-utils    = { workspace = true, features = ["time"] }
libp2p      = { workspace = true, features = ["serde"] }
overwatch   = { workspace = true }
serde       = { workspace = true, features = ["derive"] }
serde_with  = { workspace = true }
tokio       = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tracing     = { workspace = true }
