[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-cfgsync"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
axum                             = { features = ["http1", "http2", "json", "tokio"], workspace = true }
blake2                           = { workspace = true }
clap                             = { features = ["derive", "env", "std"], workspace = true }
lb-config                        = { features = ["testing"], workspace = true }
lb-core                          = { workspace = true }
lb-key-management-system-service = { workspace = true }
lb-libp2p                        = { workspace = true }
lb-node                          = { features = ["testing"], workspace = true }
num-bigint                       = { workspace = true }
rand                             = { workspace = true }
reqwest                          = { workspace = true }
serde                            = { workspace = true }
serde_json                       = { workspace = true }
serde_path_to_error              = { workspace = true }
serde_yaml                       = { workspace = true }
time                             = { workspace = true }
tokio                            = { features = ["macros", "net", "rt-multi-thread"], workspace = true }
tracing                          = { workspace = true }

[[bin]]
name = "logos-blockchain-cfgsync-client"
path = "src/bin/cfgsync-client.rs"

[[bin]]
name = "logos-blockchain-cfgsync-server"
path = "src/bin/cfgsync-server.rs"
